test/com/facebook/buck/skylark/parser/testdata/user_defined_providers/valid_provider_used_after_defined/BUCK.fixture
load("//valid_provider_used_after_defined:defs.bzl", "SomeInfo", "some_info")

_check = (SomeInfo, some_info)
