test/com/facebook/buck/skylark/parser/testdata/user_defined_providers/invalid_type/BUCK.fixture
load("//invalid_type:defs.bzl", "FakeInfo")

FakeInfo()
